--- a/tex/plain/ccrusius/ccbib.tex
+++ b/tex/plain/ccrusius/ccbib.tex
@@ -1,10 +1,14 @@
 %% @texfile{
 %%   author = "Cesar Crusius",
-%%   version = "1.0",
 %%   date = "23 November 2014",
 %%   filename = "ccbib.tex",
 %%   docstring = "Include this instead of btxmac to ensure it is included only once",
 %% }
 \input ccbase
 \pragmaonce{btxmac}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\typeout{File `ccbase.tex' \space\space <2014/11/23>}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \input btxmac
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\endinput
