bibtex regression test

--- a/tex/plain/ccrusius/ccbib.tex
+++ b/tex/plain/ccrusius/ccbib.tex
@@ -5,9 +5,9 @@
 %%   docstring = "Include this instead of btxmac to ensure it is included only once",
 %% }
 \input ccbase
-\pragmaonce{btxmac}
+\pragmaonce{ccbib}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\typeout{File `ccbase.tex' \space\space <2014/11/23>}
+\typeout{File `ccbib.tex' <2014/11/23>}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \input btxmac
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
