--- a/tex/plain/ccrusius/ccbase.tex
+++ b/tex/plain/ccrusius/ccbase.tex
@@ -104,6 +104,7 @@ local GLYPH_TYPE   = node.id("glyph")
 local HLIST_TYPE   = node.id("hlist")
 local KERN_TYPE    = node.id("kern")
 local MATH_TYPE    = node.id("math")
+local RULE_TYPE    = node.id("rule")
 local VLIST_TYPE   = node.id("vlist")
 local WHATSIT_TYPE = node.id("whatsit")
 --
@@ -115,6 +116,7 @@ ccbase = {
   HLIST_TYPE   = HLIST_TYPE,
   KERN_TYPE    = KERN_TYPE,
   MATH_TYPE    = MATH_TYPE,
+  RULE_TYPE    = RULE_TYPE,
   VLIST_TYPE   = VLIST_TYPE,
   WHATSIT_TYPE = WHATSIT_TYPE,
 }
