--- a/tex/plain/ccrusius/ccbase.tex
+++ b/tex/plain/ccrusius/ccbase.tex
@@ -79,8 +79,8 @@
 %
 \expandafter\def\csname luacode\endcsname{% \expandafter fixes vim syntax
   \bgroup
-  %\makeother\{
-  %\makeother\}
+  \makeother\{
+  \makeother\}
   \makeother\^^M
   \makeother\#
   \makeother\~
