--- a/regression/ccgrid01.tex
+++ b/regression/ccgrid01.tex
@@ -1,6 +1,7 @@
 \input ccgrid
+\tracingpages=1
 \nopagenumbers
-\par This is a short paragraph.
+This is a short paragraph.
 \par\bf This is another one.\rm
 \par\it And this is another one.\rm
 $$\sum_{i=0}^n i\> \hbox{\rm (some display math)}$$
