--- a/tex/plain/ccrusius/ccgrid.tex
+++ b/tex/plain/ccrusius/ccgrid.tex
@@ -33,9 +33,17 @@ local lastprebox = nil
 --
 -- setgrid: set the baselineskip value
 -- snapdown: reduces x (in sp) so that it is a multiple of baselineskip
+-- freeze: return a copy of the input, with all stretchability removed
 --
 local function setgrid(x) baselineskip=x end
 local function snapdown(x) return baselineskip*math.floor(x/baselineskip) end
+local function freeze(x)
+  if type(x) == "string" then
+    return (ccbase.spstr(ccbase.tosp(x))).." plus 0pt minus 0pt"
+  else
+    return ccbase.mkglue(x.spec.width,0,0,0,0)
+  end
+end
 
 local function buildpage_glue(head,cur)
   local spec = cur.spec
@@ -43,7 +51,7 @@ local function buildpage_glue(head,cur)
   haccum = haccum + width
   if spec.stretch == 0 and spec.shrink == 0 then return head, cur end
 
-  local noglue = ccbase.mkglue(cur.spec.width,0,0,0,0)
+  local noglue = freeze(cur.spec.width,0,0,0,0)
   head, noglue = node.insert_after(head,cur,noglue)
   head, noglue = node.remove(head,cur)
   --
@@ -100,7 +108,7 @@ local buildpage_actions = {
   after_output   = buildpage_after_output,
   before_display = function(head) ccshowbox.showheadlist(head,0,"  == .") end,
   box            = buildpage_box,
-  hmode_par      = nil,
+  hmode_par      = function(head) ccshowbox.showheadlist(head,0,"  == .") end,
   new_graf       = function(head) ccshowbox.showheadlist(head,0,"  == .") end,
   --
   -- pre_box: Signals that contrib_head contains material that is already
@@ -141,6 +149,7 @@ callback.register("pre_output_filter",output)
 ccgrid = {
   snapdown = snapdown,
   setgrid = setgrid,
+  freeze = freeze,
 }
 \endluacode
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -163,7 +172,8 @@ ccgrid = {
   % enabled before accepting a final proof.
   %
   \setbox0=\vbox to\vsize{
-    \hidehrulew{0.2pt}{0.2pt}{\hsize}
+    \hidehrulew{0.4pt}{0.2pt}{\hsize}
+    \vskip\topskip
     \cleaders\vbox to\baselineskip{
       \hidehrulew{.2pt}{.2pt}{\hsize}
       \vfil%
@@ -178,20 +188,33 @@ ccgrid = {
 % Sets up the environment, dimensions, and so on.
 %
 \def\ccgridsetup{
-  \typeout{ccgrid: original baselineskip=\the\baselineskip\space vsize=\the\vsize}
   %
-  % Remove glue from \baselineskip
+  % Remove glue from \baselineskip and other things.
   %
-  \global\baselineskip=\directlua{tex.print(ccbase.spstr(ccbase.tosp("\the\baselineskip")))}
+  \global\baselineskip=\directlua{tex.print(ccgrid.freeze("\the\baselineskip"))}
+  \global\topskip=\directlua{tex.print(ccgrid.freeze("\the\topskip"))}
+  \global\parskip=\directlua{tex.print(ccgrid.freeze("\the\parskip"))}
+  \global\abovedisplayskip=\directlua{tex.print(ccgrid.freeze("\the\abovedisplayskip"))}
+  \global\belowdisplayskip=\directlua{tex.print(ccgrid.freeze("\the\belowdisplayskip"))}
+  \global\abovedisplayshortskip=\directlua{tex.print(ccgrid.freeze("\the\abovedisplayshortskip"))}
+  \global\belowdisplayshortskip=\directlua{tex.print(ccgrid.freeze("\the\belowdisplayshortskip"))}
   \directlua{ccgrid.setgrid(ccbase.tosp("\the\baselineskip"))}
   %
   % Resize \vsize to be a multiple of \baselineskip.
   %
+  \global\advance\vsize by-\topskip
   \global\vsize=\ccgrid@rounddown{\the\vsize}
-  \typeout{ccgrid: new baselineskip=\the\baselineskip\space vsize=\the\vsize}
+  \global\advance\vsize by\topskip
+  %
+  % Set other values
+  %
+  \global\lineskip=0pt
+  \global\lineskiplimit=-0.5\baselineskip
+  \typeout{ccgrid: baselineskip=\the\baselineskip}
+  \typeout{ccgrid: vsize=\the\vsize}
+  \typeout{ccgrid: topskip=\the\topskip}
+  \typeout{ccgrid: parskip=\the\parskip}
   \raggedbottom% We do our own thing, but let's tell others this is the intent
-  \lineskip0pt
-  \lineskiplimit-0.5\baselineskip
 }
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \makeatother
