--- a/bibtex/bib/ccbib/ccbib.bib
+++ b/bibtex/bib/ccbib/ccbib.bib
@@ -356,6 +356,30 @@ url = {\url{http://www.ietf.org/rfc/rfc6241.txt}},
 year = 2011
 }
 
+@TechReport{RFC7223,
+author = {M. Bjorklund},
+title = {A {YANG} Data Model for Interface Management},
+howpublished = {Internet Requests for Comments},
+type = {{RFC}},
+number = 7223,
+publisher = {{IETF}},
+institution = {Internet Engineering Task Force},
+url = {\url{http://www.ietf.org/rfc/rfc7223.txt}},
+year = 2014
+}
+
+@TechReport{RFC7277,
+author = {M. Bjorklund},
+title = {A {YANG} Data Model for {IP} Management},
+howpublished = {Internet Requests for Comments},
+type = {{RFC}},
+number = 7277,
+publisher = {{IETF}},
+institution = {Internet Engineering Task Force},
+url = {\url{http://www.ietf.org/rfc/rfc7277.txt}},
+year = 2014
+}
+
 @Misc{semanticmerge,
 author = {{\relax Semanticmerge}},
 title = {Semanticmerge},
