bibliography with multiple notes

--- a/bibtex/bib/ccbib/ccbib.bib
+++ b/bibtex/bib/ccbib/ccbib.bib
@@ -230,6 +230,13 @@ howpublished = {\url{http://technet.microsoft.com/en-us/library/cc765981.aspx}},
 note = {[Online; accessed 9-October-2014]}
 }
 
+@TechReport{NCS3.3,
+author = {Tail-f Systems},
+publisher = {Tail-f Systems},
+title = {{NCS} {$3.3$} User Guide},
+year = 2014
+}
+
 @Misc{ODL:LoggingBestPractices,
 author = {Robert Varga},
 title = {Logging Best Practices},
@@ -306,6 +313,18 @@ publisher = {{IETF}},
 institution = {Internet Engineering Task Force},
 url = {\url{http://www.ietf.org/rfc/rfc3164.txt}},
 year = 2001
+}
+
+@TechReport{RFC5277,
+author = {S. Chisholm and H. Trevino},
+title = {{NETCONF} Event Notifications},
+howpublished = {Internet Requests for Comments},
+type = {{RFC}},
+number = 5277,
+publisher = {{IETF}},
+institution = {Internet Engineering Task Force},
+url = {\url{http://www.ietf.org/rfc/rfc5277.txt}},
+year = 2008
 }
 
 @TechReport{RFC5424,
