rfc6470 bib entry

--- a/bibtex/bib/ccbib/ccbib.bib
+++ b/bibtex/bib/ccbib/ccbib.bib
@@ -375,6 +375,18 @@ url = {\url{http://www.ietf.org/rfc/rfc6241.txt}},
 year = 2011
 }
 
+@TechReport{RFC6470,
+author = {A. Bierman},
+title = {Network Configuration Protocol {(NETCONF)} Base Notifications},
+howpublished = {Internet Requests for Comments},
+type = {{RFC}},
+number = 6470,
+publisher = {{IETF}},
+institution = {Internet Engineering Task Force},
+url = {\url{http://www.ietf.org/rfc/rfc6470.txt}},
+year = 2012
+}
+
 @TechReport{RFC7223,
 author = {M. Bjorklund},
 title = {A {YANG} Data Model for Interface Management},
