More RFC bib entries

--- a/bibtex/bib/ccbib/ccbib.bib
+++ b/bibtex/bib/ccbib/ccbib.bib
@@ -387,6 +387,30 @@ url = {\url{http://www.ietf.org/rfc/rfc6470.txt}},
 year = 2012
 }
 
+@TechReport{RFC6536,
+author = {A. Bierman and M. Bjorklund},
+title = {Network Configuration Protocol {(NETCONF)} Access Control Model},
+howpublished = {Internet Requests for Comments},
+type = {{RFC}},
+number = 6536,
+publisher = {{IETF}},
+institution = {Internet Engineering Task Force},
+url = {\url{http://www.ietf.org/rfc/rfc6536.txt}},
+year = 2012
+}
+
+@TechReport{RFC6991,
+author = {J. Schoenwalder},
+title = {Common {YANG} Data Types},
+howpublished = {Internet Requests for Comments},
+type = {{RFC}},
+number = 6991,
+publisher = {{IETF}},
+institution = {Internet Engineering Task Force},
+url = {\url{http://www.ietf.org/rfc/rfc6991.txt}},
+year = 2013
+}
+
 @TechReport{RFC7223,
 author = {M. Bjorklund},
 title = {A {YANG} Data Model for Interface Management},
